fixed styles and added mobile menu

--- a/index.html
+++ b/index.html
@@ -17,12 +17,26 @@
     <header>
         <a href=#><img src="assets/logo.png" alt="Fitzroy Pinnacle Loader"></a>
 
-        <ul>
+        <ul id="desktop-ul" class="desktop-ul">
             <li>Menu</li>
             <li>Contact us</li>
+            <button><a
+                    href="https://www.thefork.com.au/restaurant/the-fitzroy-pinnacle-r631541#booking=&partySize=2">Book
+                    a Table</a></button>
         </ul>
-        <button>Book a Table</button>
+
+        <button class="hamburger" id="hamburger">
+            <i class="fas fa-bars"></i>
+        </button>
     </header>
+
+    <ul id="nav-ul" class="nav-ul">
+        <li>Menu</li>
+        <li>Contact us</li>
+        <button><a href="https://www.thefork.com.au/restaurant/the-fitzroy-pinnacle-r631541#booking=&partySize=2">Book
+                a Table</a></button>
+    </ul>
+
 
     <section>
 
@@ -33,14 +47,12 @@
                 <h1>Keeping Live <br>Music Alive</h1>
 
                 <p>We’re open and following all government guidelines to make the space as safe as possible for
-                    everyone.
-                    Book a table below
-
-
-                </p>
+                    everyone. </p>
 
                 <p>Book a table below</p>
-                <button>Book a Table</button>
+                <button><a
+                        href="https://www.thefork.com.au/restaurant/the-fitzroy-pinnacle-r631541#booking=&partySize=2">Book
+                        a Table</a></button>
             </div>
         </div>
         <div class="full-image image-1"></div>
@@ -56,7 +68,9 @@
                 </p>
 
                 <p>Book a table below</p>
-                <button>Book a Table</button>
+                <button><a
+                        href="https://www.thefork.com.au/restaurant/the-fitzroy-pinnacle-r631541#booking=&partySize=2">Book
+                        a Table</a></button>
             </div>
         </div>
     </section>
@@ -98,7 +112,6 @@
     </div>
 
     <div class="info-section">
-
         <article>
             <div class="text">
                 <h2>Opening Times</h2>
@@ -112,9 +125,7 @@
             <div class="text">
                 <h2>Contact US</h2>
                 <p>For events, band bookings and anything else contact us at: </p>
-
-
-                <p><b>contact@fitzroypinnacle.com.au</b></p>
+                <p><b>hello@fitzroypinnacle.com.au</b></p>
             </div>
         </article>
     </div>
@@ -125,17 +136,15 @@
 
             <div class="text">
 
-                <h1>Keeping Live <br>Music Alive</h1>
+                <h1>Beers on tap</h1>
 
-                <p>We’re open and following all government guidelines to make the space as safe as possible for
-                    everyone.
-                    Book a table below
-
-
+                <p>At the Pinny we love our craft beer we have rotating taps that change weekly and monthly specials.
                 </p>
 
-                <p>Book a table below</p>
-                <button>Book a Table</button>
+                <p>Check what’s on tap below</p>
+
+
+                <button><a href="https://nowtapped.com/thefitzroypinnacle" target="_blank">Now Tapped</a></button>
             </div>
         </div>
         <div class="full-image image-3"></div>
@@ -148,14 +157,14 @@
         <article>
             <h2>Keep it social</h2>
 
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-instagram"></i>
+            <a href="https://www.facebook.com/TheFitzroyPinnacle/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/fitzroypinnacle/" target="_blank"><i class="fab fa-instagram"></i></a>
 
         </article>
     </div>
 
 
-
+    <script src="app.js"></script>
 </body>
 
 </html>
