--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="styles.css">
-    <title>The Fitzroy Pinnacle</title>
+    <title>Menu | The Fitzroy Pinnacle</title>
 </head>
 
 <body>
