--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a href=#><img src="assets/logo.png" alt="Fitzroy Pinnacle Loader"></a>
 
         <ul id="desktop-ul" class="desktop-ul">
+            <li><a href="index.html">Home</a></li>
             <li><a href="menu.html">Menu</a></li>
             <li><a href="contact.html">Contact us</a></li>
             <button><a
@@ -31,6 +32,7 @@
     </header>
 
     <ul id="nav-ul" class="nav-ul">
+        <li><a href="index.html">Home</a></li>
         <li><a href="menu.html">Menu</a></li>
         <li><a href="contact.html">Contact us</a></li>
         <button><a href="https://www.thefork.com.au/restaurant/the-fitzroy-pinnacle-r631541#booking=&partySize=2">Book
