--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
 <body>
 
     <header>
-        <a href=#><img src="assets/logo.png" alt="Fitzroy Pinnacle Loader"></a>
+        <a href=index.html><img src="assets/logo.png" alt="Fitzroy Pinnacle Loader"></a>
 
         <ul id="desktop-ul" class="desktop-ul">
             <li><a href="index.html">Home</a></li>
@@ -46,33 +46,33 @@
 
             <div class="text">
 
-                <h1>Keeping Live <br>Music Alive</h1>
+                <h1>Keeping Great <br>Food Great</h1>
 
-                <p>We’re open and following all government guidelines to make the space as safe as possible for
-                    everyone. </p>
+                <p>We have some of the best pub food going around. Drop in for a couple of share meals or for a full
+                    dining experience. See you at at bar.</p>
 
-                <p>Book a table below</p>
+                <p>Book a table below or scroll down to check out the menu</p>
                 <button><a
                         href="https://www.thefork.com.au/restaurant/the-fitzroy-pinnacle-r631541#booking=&partySize=2">Book
                         a Table</a></button>
             </div>
         </div>
-        <div class="full-image image-1"></div>
+        <div class="full-image image-4"></div>
     </section>
     <section>
-        <div class="full-image image-2"></div>
+        <div class="full-image image-5"></div>
         <div class="container">
             <div class="text">
-                <h1>About US</h1>
+                <h1>Check Our Menu</h1>
 
-                <p>We’re open and following all government guidelines to make the space as safe as possible for
-                    everyone.
+                <p>As well as weekly specials we have scrumptious share meals, great starters, tasty mains and
+                    delightful desserts. Choose to match that with a wine or beer of your choice.
                 </p>
 
-                <p>Book a table below</p>
+                <p>Check our menu</p>
                 <button><a
-                        href="https://www.thefork.com.au/restaurant/the-fitzroy-pinnacle-r631541#booking=&partySize=2">Book
-                        a Table</a></button>
+                        href="https://www.thefork.com.au/restaurant/the-fitzroy-pinnacle-r631541#booking=&partySize=2">Check
+                        our menu</a></button>
             </div>
         </div>
     </section>
@@ -154,7 +154,7 @@
 
     <div class="footer-section">
         <article>
-            <img src="assets/logo.png" alt="Logo">
+            <a href="index.html"><img src="assets/logo.png" alt="Logo"></a>
         </article>
         <article>
             <h2>Keep it social</h2>
