--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
     <div class="footer-section">
         <article>
-            <img src="assets/logo.png" alt="Logo">
+            <a href="index.html"><img src="assets/logo.png" alt="Logo"></a>
         </article>
         <article>
             <h2>Keep it social</h2>
