added new info section and fixed font sizes

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="text">
                 <h2>Contact US</h2>
                 <p>For events, band bookings and anything else contact us at: </p>
-                <p><b>hello@fitzroypinnacle.com.au</b></p>
+                <p><a href="mailto:hello@fitzroypinnacle.com.au"><b>hello@fitzroypinnacle.com.au</b></a></p>
             </div>
         </article>
     </div>
