--- a/contact.html
+++ b/contact.html
@@ -119,6 +119,7 @@
         </div>
     </div>
 
+
     <div class="info-section">
         <article>
             <div class="text">
@@ -126,17 +127,24 @@
                 <p>We are open 7 days a week</p>
 
                 <p><b>Sun - Thurs:</b> 4 - 10pm</p>
-                <p><b>Fri - Sat:</b> 2 - midnight</p>
+                <p><b>Fri - Sat:</b> 2 - 1am</p>
+
             </div>
         </article>
         <article>
             <div class="text">
                 <h2>Contact US</h2>
                 <p>For events, band bookings and anything else contact us at: </p>
-                <p><b>hello@fitzroypinnacle.com.au</b></p>
+                <p><a href="mailto:hello@fitzroypinnacle.com.au"><b>hello@fitzroypinnacle.com.au</b></a></p>
+                <p>Call Us:<a href="tel:+61394893044"> 03 9489 3044</a></p>
+                <p>Find Us at:
+                <address>
+                    <p>251 St Georges Rd Fitzroy North, VIC</p>
+                </address>
+                </p>
+
             </div>
         </article>
-    </div>
     </div>
     <section>
 
@@ -159,20 +167,35 @@
     </section>
 
     <div class="footer-section">
-        <article>
-            <a href="index.html"><img src="assets/logo.png" alt="Logo"></a>
-        </article>
-        <article>
-            <h2>Keep it social</h2>
+        <div class="footer-section">
+            <article>
+                <h2>Keep it social</h2>
 
-            <a href="https://www.facebook.com/TheFitzroyPinnacle/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/fitzroypinnacle/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com/TheFitzroyPinnacle/" target="_blank" rel="noopener noreferrer"><i
+                        class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/fitzroypinnacle/" target="_blank" rel="noopener noreferrer"><i
+                        class="fab fa-instagram"></i></a>
 
-        </article>
-    </div>
+            </article>
+            <article>
+                <h3>We are open 7 days a week</h3>
+
+                <p><b>Sun - Thurs:</b> 4pm - 10pm</p>
+                <p><b>Fri - Sat:</b> 2pm - 1am</p>
+                <br>
+                <h3>Find Us at:</h3>
+                <address>
+                    <p>251 St Georges Rd Fitzroy North, VIC</p>
+                </address>
+            </article>
+
+            <article>
+                <a href="index.html"><img src="assets/logo.png" alt="Logo"></a>
+            </article>
+        </div>
 
 
-    <script src="app.js"></script>
+        <script src="app.js"></script>
 </body>
 
 </html>
