--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="menu.html">Menu</a></li>
             <li><a href="contact.html">Contact us</a></li>
-            <button><a
-                    href="https://www.thefork.com.au/restaurant/the-fitzroy-pinnacle-r631541#booking=&partySize=2">Book
+            <button><a href="https://www.thefork.com.au/restaurant/the-fitzroy-pinnacle-r631541#booking=&partySize=2"
+                    target="_blank" rel="noopener noreferrer">Book
                     a Table</a></button>
         </ul>
 
@@ -35,7 +35,8 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="menu.html">Menu</a></li>
         <li><a href="contact.html">Contact us</a></li>
-        <button><a href="https://www.thefork.com.au/restaurant/the-fitzroy-pinnacle-r631541#booking=&partySize=2">Book
+        <button><a href="https://www.thefork.com.au/restaurant/the-fitzroy-pinnacle-r631541#booking=&partySize=2"
+                target="_blank" rel="noopener noreferrer">Book
                 a Table</a></button>
     </ul>
 
@@ -53,8 +54,13 @@
 
                 <p>Book a table below</p>
                 <button><a
-                        href="https://www.thefork.com.au/restaurant/the-fitzroy-pinnacle-r631541#booking=&partySize=2">Book
+                        href="https://www.thefork.com.au/restaurant/the-fitzroy-pinnacle-r631541#booking=&partySize=2"
+                        target="_blank" rel="noopener noreferrer">Book
                         a Table</a></button>
+
+                <button><a
+                        href="https://www.thefork.com.au/restaurant/the-fitzroy-pinnacle-r631541#booking=&partySize=2"
+                        target="_blank" rel="noopener noreferrer">Check our menu</a></button>
             </div>
         </div>
         <div class="full-image image-1"></div>
@@ -71,8 +77,10 @@
 
                 <p>Book a table below</p>
                 <button><a
-                        href="https://www.thefork.com.au/restaurant/the-fitzroy-pinnacle-r631541#booking=&partySize=2">Book
+                        href="https://www.thefork.com.au/restaurant/the-fitzroy-pinnacle-r631541#booking=&partySize=2"
+                        target="_blank" rel="noopener noreferrer">Book
                         a Table</a></button>
+
             </div>
         </div>
     </section>
@@ -120,7 +128,8 @@
                 <p>We are open 7 days a week</p>
 
                 <p><b>Sun - Thurs:</b> 4 - 10pm</p>
-                <p><b>Fri - Sat:</b> 2 - midnight</p>
+                <p><b>Fri - Sat:</b> 2 - 1am</p>
+
             </div>
         </article>
         <article>
@@ -128,9 +137,15 @@
                 <h2>Contact US</h2>
                 <p>For events, band bookings and anything else contact us at: </p>
                 <p><a href="mailto:hello@fitzroypinnacle.com.au"><b>hello@fitzroypinnacle.com.au</b></a></p>
+                <p>Call Us:<a href="tel:+61394893044"> 03 9489 3044</a></p>
+                <p>Find Us at:
+                <address>
+                    <p>251 St Georges Rd Fitzroy North, VIC</p>
+                </address>
+                </p>
+
             </div>
         </article>
-    </div>
     </div>
     <section>
 
@@ -146,7 +161,8 @@
                 <p>Check what’s on tap below</p>
 
 
-                <button><a href="https://nowtapped.com/thefitzroypinnacle" target="_blank">Now Tapped</a></button>
+                <button><a href="https://nowtapped.com/thefitzroypinnacle" target="_blank" rel="noopener noreferrer">Now
+                        Tapped</a></button>
             </div>
         </div>
         <div class="full-image image-3"></div>
@@ -154,14 +170,28 @@
 
     <div class="footer-section">
         <article>
-            <a href="index.html"><img src="assets/logo.png" alt="Logo"></a>
-        </article>
-        <article>
             <h2>Keep it social</h2>
 
-            <a href="https://www.facebook.com/TheFitzroyPinnacle/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/fitzroypinnacle/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/TheFitzroyPinnacle/" target="_blank" rel="noopener noreferrer"><i
+                    class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/fitzroypinnacle/" target="_blank" rel="noopener noreferrer"><i
+                    class="fab fa-instagram"></i></a>
 
+        </article>
+        <article>
+            <h3>We are open 7 days a week</h3>
+
+            <p><b>Sun - Thurs:</b> 4pm - 10pm</p>
+            <p><b>Fri - Sat:</b> 2pm - 1am</p>
+            <br>
+            <h3>Find Us at:</h3>
+            <address>
+                <p>251 St Georges Rd Fitzroy North, VIC</p>
+            </address>
+        </article>
+
+        <article>
+            <a href="index.html"><img src="assets/logo.png" alt="Logo"></a>
         </article>
     </div>
 
