--- a/contact.html
+++ b/contact.html
@@ -166,36 +166,39 @@
         <div class="full-image image-3"></div>
     </section>
 
+
     <div class="footer-section">
-        <div class="footer-section">
-            <article>
-                <h2>Keep it social</h2>
+        <article>
+            <h2>Keep it social</h2>
 
-                <a href="https://www.facebook.com/TheFitzroyPinnacle/" target="_blank" rel="noopener noreferrer"><i
-                        class="fab fa-facebook-f"></i></a>
-                <a href="https://www.instagram.com/fitzroypinnacle/" target="_blank" rel="noopener noreferrer"><i
-                        class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/TheFitzroyPinnacle/" target="_blank" rel="noopener noreferrer"><i
+                    class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/fitzroypinnacle/" target="_blank" rel="noopener noreferrer"><i
+                    class="fab fa-instagram"></i></a>
 
-            </article>
-            <article>
-                <h3>We are open 7 days a week</h3>
+        </article>
+        <article>
+            <h3>We are open 7 days a week</h3>
 
-                <p><b>Sun - Thurs:</b> 4pm - 10pm</p>
-                <p><b>Fri - Sat:</b> 2pm - 1am</p>
-                <br>
-                <h3>Find Us at:</h3>
-                <address>
-                    <p>251 St Georges Rd Fitzroy North, VIC</p>
-                </address>
-            </article>
+            <p><b>Sun - Thurs:</b> 4pm - 10pm</p>
+            <p><b>Fri - Sat:</b> 2pm - 1am</p>
+            <br>
+            <h3>Call us:</h3>
+            <p><a href="tel:+61394893044"> 03 9489 3044</a></p>
+            <br>
+            <h3>Find us at:</h3>
+            <address>
+                <p>251 St Georges Rd Fitzroy North, VIC</p>
+            </address>
+        </article>
 
-            <article>
-                <a href="index.html"><img src="assets/logo.png" alt="Logo"></a>
-            </article>
-        </div>
+        <article>
+            <a href="index.html"><img src="assets/logo.png" alt="Logo"></a>
+        </article>
+    </div>
 
 
-        <script src="app.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
