--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
                         target="_blank" rel="noopener noreferrer">Book
                         a Table</a></button>
 
-                <button><a
-                        href="https://www.thefork.com.au/restaurant/the-fitzroy-pinnacle-r631541#booking=&partySize=2"
+                <button><a href="https://www.thefork.com.au/restaurant/the-fitzroy-pinnacle-r631541/menu"
                         target="_blank" rel="noopener noreferrer">Check our menu</a></button>
             </div>
         </div>
@@ -184,7 +183,10 @@
             <p><b>Sun - Thurs:</b> 4pm - 10pm</p>
             <p><b>Fri - Sat:</b> 2pm - 1am</p>
             <br>
-            <h3>Find Us at:</h3>
+            <h3>Call us:</h3>
+            <p><a href="tel:+61394893044"> 03 9489 3044</a></p>
+            <br>
+            <h3>Find us at:</h3>
             <address>
                 <p>251 St Georges Rd Fitzroy North, VIC</p>
             </address>
