added smaller boxes for weekly specials

--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
                         target="_blank" rel="noopener noreferrer">Book
                         a Table</a></button>
 
-                <button><a href="https://www.thefork.com.au/restaurant/the-fitzroy-pinnacle-r631541/menu"
-                        target="_blank" rel="noopener noreferrer">Check our menu</a></button>
+                <button><a href="./assets/menu.jpg" target="_blank" rel="noopener noreferrer">Check our
+                        menu</a></button>
             </div>
         </div>
         <div class="full-image image-1"></div>
     </section>
     <section>
         <div class="full-image image-2"></div>
-        <div class="container">
+        <div class="container about-us">
             <div class="text">
                 <h1>About US</h1>
 
@@ -93,7 +93,7 @@
                 <h2>Meatless <br>Mondays</h2>
             </div>
 
-            <p>All vegan options </p>
+            <p>Choose from 2 options</p>
 
             <h3>$20</h3>
         </div>
