--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
                 <p>Call Us:<a href="tel:+61394893044"> 03 9489 3044</a></p>
                 <p>Find Us at:
                 <address>
-                    <p>251 St Georges Rd Fitzroy North, VIC</p>
+                    <p><a href="https://g.page/FitzroyPinnacle?share">251 St Georges Rd Fitzroy North, VIC</a></p>
+                </address>
                 </address>
                 </p>
 
@@ -188,7 +189,7 @@
             <br>
             <h3>Find us at:</h3>
             <address>
-                <p>251 St Georges Rd Fitzroy North, VIC</p>
+                <p><a href="https://g.page/FitzroyPinnacle?share">251 St Georges Rd Fitzroy North, VIC</a></p>
             </address>
         </article>
 
