--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@
                 <p>Call Us:<a href="tel:+61394893044"> 03 9489 3044</a></p>
                 <p>Find Us at:
                 <address>
-                    <p><a href="https://www.google.com/maps/place/The+Fitzroy+Pinnacle">251 St Georges Rd Fitzroy North,
+                    <p><a href="https://www.google.com/maps/dir/?api=1&origin=The+Fitzroy+Pinnacle">251 St Georges Rd
+                            Fitzroy
+                            North,
                             VIC</a></p>
                 </address>
                 </address>
@@ -190,7 +192,8 @@
             <br>
             <h3>Find us at:</h3>
             <address>
-                <p><a href="https://g.page/FitzroyPinnacle?share">251 St Georges Rd Fitzroy North, VIC</a></p>
+                <p><a href="https://www.google.com/maps/dir/?api=1&origin=The+Fitzroy+Pinnacle">251 St Georges Rd
+                        Fitzroy North, VIC</a></p>
             </address>
         </article>
 
