--- a/index.html
+++ b/index.html
@@ -139,11 +139,10 @@
                 <p>Call Us:<a href="tel:+61394893044"> 03 9489 3044</a></p>
                 <p>Find Us at:
                 <address>
-                    <p><a href="https://www.google.com/maps/dir/?api=1&origin=The+Fitzroy+Pinnacle">251 St Georges Rd
+                    <p><a href="https://www.google.com/maps/search/?api=1&query=The+Fitzroy+Pinnacle">251 St Georges Rd
                             Fitzroy
                             North,
                             VIC</a></p>
-                </address>
                 </address>
                 </p>
 
@@ -192,7 +191,7 @@
             <br>
             <h3>Find us at:</h3>
             <address>
-                <p><a href="https://www.google.com/maps/dir/?api=1&origin=The+Fitzroy+Pinnacle">251 St Georges Rd
+                <p><a href="https://www.google.com/maps/search/?api=1&query=The+Fitzroy+Pinnacle">251 St Georges Rd
                         Fitzroy North, VIC</a></p>
             </address>
         </article>
