--- a/foodanddrink.html
+++ b/foodanddrink.html
@@ -15,7 +15,7 @@
 <body>
 
     <header>
-        <a href=#><img src="assets/logo.png" alt="Fitzroy Pinnacle Loader"></a>
+        <a href="index.html"><img src="assets/logo.png" alt="Fitzroy Pinnacle Loader"></a>
 
         <ul id="desktop-ul" class="desktop-ul">
             <li><a href="index.html">Home</a></li>
