--- a/functions.html
+++ b/functions.html
@@ -9,11 +9,12 @@
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="transition.css">
     <title>The Fitzroy Pinnacle</title>
 </head>
 
 <body>
-
+    <div class="transition transition-2 is-active"></div>
     <header>
         <a href="index.html"><img src="assets/logo.png" alt="Fitzroy Pinnacle Loader"></a>
 
